kubernetes/clh-02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: clh-game
  name: clh-game
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clh-game
  template:
    metadata:
      labels:
        app: clh-game
    spec:
      containers:
      - image: docker.io/mossicrue/clh-game:stable
        name: clh-game
        resources:
