kubernetes/clh-03-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: clh-game
  name: clh-game
  namespace: clh-game
spec:
  ports:
  - name: 3000-3000
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: clh-game
  type: ClusterIP
