kubernetes/clh-all.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: clh-game
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: clh-game
  name: clh-game
  namespace: clh-game
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clh-game
  template:
    metadata:
      labels:
        app: clh-game
    spec:
      containers:
      - image: docker.io/mossicrue/clh-game:stable
        name: clh-game
        resources: {}
        ports:
        - containerPort: 3000
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: clh-game
  name: clh-game
  namespace: clh-game
spec:
  ports:
  - name: clh-game-port
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: clh-game
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: clh-game
  name: clh-game
  namespace: clh-game
spec:
  # host: test-clh-clh-game.2886795291-80-host19nc.environments.katacoda.com
  port:
    targetPort: clh-game-port
  to:
    kind: Service
    name: clh-game
    weight: 100
  wildcardPolicy: None
