kubernetes/ocp-resources.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: clh-game
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: clh-game
  name: clh-game
  namespace: clh-game
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clh-game
  template:
    metadata:
      labels:
        app: clh-game
        test: "true"
    spec:
      securityContext:
        runAsUser: 0
      containers:
      - image: docker.io/mossicrue/clh-game:stable
        name: clh-game
        resources: {}
        ports:
        - containerPort: 3000
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: clh-game
  name: clh-game
  namespace: clh-game
spec:
  ports:
  - name: clh-game-port
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: clh-game
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: clh-game
  name: clh-game
  namespace: clh-game
spec:
  port:
    targetPort: clh-game-port
  to:
    kind: Service
    name: clh-game
    weight: 100
  wildcardPolicy: None
